versioned_docs/version-1.3.2/user/user-manual/dashboard.md
---
title: Dashboard
sidebar_label: Dashboard
description: An overview of the Time Management App Dashboard, featuring the Priority Matrix, time distribution charts, and quick navigation for projects and tasks.
---

# Dashboard

## Introduction
The **Dashboard** is the main screen of the Time Management App. It provides a quick overview of tasks, projects, and time distribution based on priority.

This screen enables users to:
* Identify tasks requiring immediate attention.
* Organize work efficiently.
* Monitor time spent across activities and projects.

---

## Dashboard Overview
The Dashboard consists of the following key sections:
1. Header (Top Bar)
2. Unsaved Drafts Alert 
3. Priority Matrix
4. Navigation Tabs (Overview, Projects, Tasks) 
5. Quick Action Button

---

## Header Section
Located at the top of the screen.

### Features:
* **Menu Icon:** Opens the side navigation menu.
* **Account Name / Title:** Displays "Dashboard" and the currently active date range filter (e.g., "This Month").
* **Filter Icon (Sliders):** Opens the Date Range filter dropdown to adjust the time period of the displayed data.
* **Add Icon (Clock with +):** Used to quickly create a new timesheet entry.
* **Notification Icon:** Displays alerts and updates.
* **Info Icon:** Provides additional information about the dashboard chart guid

---

## Date Range Filter
A new filtering feature allows users to control the time period for the data displayed across the entire dashboard. 

* **Default View:** By default, the dashboard displays data for **This Month**.
* **Filter Options:** Clicking the Filter Icon in the header opens a "Date Range" dropdown menu with the following predefined options:
    * No Filter (All Time)
    * Today
    * This Week
    * This Month
    * This Quarter
    * This Year
    * Custom Range...
* **Custom Date Range:** Selecting "Custom Range..." opens a dedicated dialog box. Users can specify an exact time period by selecting a **From:** date and a **To:** date using the date pickers. Clicking **Apply Range** updates the dashboard to reflect this custom period, while clicking **Cancel** dismisses the dialog without making changes.

---

## Unsaved Drafts Alert
Upon launching the app, if there is unsubmitted work, an **Unsaved Drafts Found** popup may appear.
* Notifies the user of unsubmitted work from a previous session (e.g., Timesheets, Project Updates).
* Prompts the user to open the respective forms to restore their changes.

---

## Priority Matrix
The Priority Matrix categorizes tasks based on urgency and importance. It is organized visually with **URGENT** and **NOT URGENT** on the top axis, and **IMPORTANT** and **NOT IMPORTANT** on the side axis.

### Categories:
* **Do First (Urgent & Important):** Tasks that require immediate attention (Red tile).
* **Do Next (Not Urgent & Important):** Important tasks that can be scheduled (Blue tile).
* **Do Later (Urgent & Not Important):** Tasks that can be postponed or delegated (Green tile).
* **Don’t Do (Not Urgent & Not Important):** Tasks that are unnecessary (Grey tile).

### Time Display:
Each category displays total time spent (e.g., `98H`), helping users evaluate productivity and time allocation for the selected date range.

---

## Navigation Tabs
Below the Priority Matrix, the dashboard is divided into three primary tabs: **Overview**, **Projects**, and **Tasks**.

### 1. Overview Tab
Displays visual charts for time tracking.
* **Most Time-Consuming Projects (Donut Chart):** Visual representation of time distribution across projects. Larger segments indicate higher time usage.
* **Percentage Value:** The exact proportion of total logged time attributed to this specific project (e.g., "51.8%").

### 2. Projects Tab
Displays detailed information about user projects, along with a master total of hours logged across all projects.
* **Project-wise Time Spent (Bar Chart):** Displays time spent per project. The axes allow visual comparison of effort across projects. Includes **"Show next 10" and "Show fewer"** buttons are available at the bottom to expand the projects list.


### 3. Tasks Tab
A dedicated tab for managing and viewing individual tasks.  


* **Search Bar:** Enables quick project lookup ("Search projects…").
* **Sorting Options:**
    * **Most Time:** Sort by highest time spent.
    * **Tasks:** Sort by number of tasks.
    * **A–Z:** Alphabetical sorting.
* **Project List:** Displays individual projects with their specific task counts, total time spent, and a visual progress indicator.

**Project Details View:**
Tapping on a specific project in the list navigates to a detailed view for that project, which includes:
* A summary header displaying the `TOTAL` time, `AVERAGE` time, total `TASKS`, and the `TOP TASK`.
* A specific bar chart breaking down time spent by individual tasks within that project.
* A list of individual tasks showing their percentage of project time, total hours, and a navigation arrow for further details.


---

## Quick Action Button
A floating action button (cyan circle with a menu icon) located at the bottom-right corner of the screen.

### Functions:
* Add a new task.
* Create a timesheet entry.
* Log activity.